# librdfa

./: .gitignore.in  AUTHORS  LICENSE  Makefile.am  Makefile.in  README  README.md  README.txt  autogen.sh  configure  configure.ac  librdfa-uninstalled.pc.in  librdfa.pc.in
c/: Makefile.am  Makefile.in  context.c  curie.c  iri.c  language.c  lists.c  mappings.c  mingw32_utils.c  mingw32_utils.h  namespace.c  parser_libxml2.c  parser_raptor.c  rdfa.c  rdfa.h  rdfa_utils.c  rdfa_utils.h  subject.c  triple.c
docs/: Makefile.am  Makefile.in
installers/debian/: changelog  changelog.in  control  copyright  librdfa1-dev.install  librdfa1.install  rules
python/: Makefile.am  Makefile.in  RdfaParser.cpp  RdfaParser.h  rdfa.i
setup/: Makefile.base.in  docs.doxygen
setup/librdfa-msvc/: build.bat  build.vbs
setup/librdfa-msvc/librdfa/: librdfa.sln  librdfa.vcproj
setup/librdfa-msvc/rdfa-lib/: rdfa-lib.vcproj
tests/: Makefile.am  Makefile.in  curies.c  qa-build.sh  rdfa2n3.c  rdfa2n3.py  rdfa2rdf.py  rdfa2rdfxml.py  rdfap.c  rdfastring2n3.c  speed.c  speed2.c
tests/test-cases/: fetch-tests
tests/testsuite/: extract.py  fetch-tests
